<resources>
    <string name="app_name">Shop Online</string>
    <string name="ecommerce_c">Ecomerce Concept</string>
    <string name="explorer">Explorer</string>
    <string name="shop">Shop</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="other">Other</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best seller</string>
    <string name="buy_now">Buy now!</string>
    <string name="shop_item">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="product_details">Product Details</string>

    <string-array name="city">
        <item>Zihuatanejo, Gro</item>
        <item>Moscow, Ru</item>
        <item>Rostov-on-Don, Ru</item>
    </string-array>
</resources>