<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cart.CartActivity">

    <ImageView
        android:id="@+id/img_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prod_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/mark_pro_medium"
        android:text="@string/add_address"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_cart_btn"
        app:layout_constraintEnd_toStartOf="@+id/img_cart_btn"
        app:layout_constraintTop_toTopOf="@+id/img_cart_btn" />

    <ImageView
        android:id="@+id/img_cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/address_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/my_cart"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/img_back_btn"
        app:layout_constraintTop_toBottomOf="@+id/img_back_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/dark_blue"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="-25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/materialDivider_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/cart_list_item"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:dividerColor="@color/white_25"
                app:layout_constraintBottom_toTopOf="@+id/total_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/mark_pro"
                android:text="Total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/del_text"
                app:layout_constraintStart_toStartOf="@+id/del_text" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/mark_pro_bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/total_text"
                app:layout_constraintEnd_toEndOf="@+id/btn_checkout"
                app:layout_constraintTop_toTopOf="@+id/total_text"
                tools:text="$6,000 us" />

            <TextView
                android:id="@+id/del_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/materialDivider_20"
                app:layout_constraintStart_toStartOf="@+id/btn_checkout" />

            <TextView
                android:id="@+id/delivery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/del_text"
                app:layout_constraintStart_toStartOf="@+id/price_text"
                app:layout_constraintTop_toTopOf="@+id/del_text"
                tools:text="Free" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:dividerColor="@color/white_20"
                app:layout_constraintBottom_toTopOf="@+id/btn_checkout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/light_red"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/text_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mark_pro_bold"
                        android:text="@string/checkout"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>