<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white"
    tools:context=".presentation.product.ProductDetailsActivity">

    <ImageView
        android:id="@+id/img_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prod_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro_medium"
        android:text="@string/product_details"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_back_btn"
        app:layout_constraintEnd_toStartOf="@+id/img_cart_btn"
        app:layout_constraintStart_toEndOf="@+id/img_back_btn"
        app:layout_constraintTop_toTopOf="@+id/img_back_btn" />

    <ImageView
        android:id="@+id/img_cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/cart_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prod_det"
        tools:listitem="@layout/prod_det_item"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="471dp"
        android:layout_marginTop="48dp"
        android:elevation="1dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_medium"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Galaxy Note 20 Ultra"/>

            <CheckBox
                android:id="@+id/btn_favorite_prod"
                android:layout_width="37dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:background="@drawable/check_favor_prod"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="@+id/title_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_phone" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/title_phone"
                app:layout_constraintTop_toBottomOf="@+id/title_phone" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                app:tabIndicatorColor="@color/light_red"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/dark_blue">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_tab_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_item" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/details_tab_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/features_tab_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/features" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs_card">

                <ImageView
                    android:id="@+id/img_cpu"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/cpu"
                    app:layout_constraintEnd_toStartOf="@+id/img_camera"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/mark_pro"
                    android:textColor="@color/gray"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/img_cpu"
                    app:layout_constraintStart_toStartOf="@+id/img_cpu"
                    app:layout_constraintTop_toBottomOf="@+id/img_cpu"
                    tools:text="Exynos 990" />

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/photoapp"
                    app:layout_constraintEnd_toStartOf="@+id/img_memory"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_cpu"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/mark_pro"
                    android:textColor="@color/gray"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/img_camera"
                    app:layout_constraintStart_toStartOf="@+id/img_camera"
                    app:layout_constraintTop_toBottomOf="@+id/img_camera"
                    tools:text="108 + 12 px" />

                <ImageView
                    android:id="@+id/img_memory"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/memory"
                    app:layout_constraintEnd_toStartOf="@+id/img_sd"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_camera"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_ssd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/mark_pro"
                    android:textColor="@color/gray"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/img_memory"
                    app:layout_constraintStart_toStartOf="@+id/img_memory"
                    app:layout_constraintTop_toBottomOf="@+id/img_memory"
                    tools:text="8 Gb" />

                <ImageView
                    android:id="@+id/img_sd"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/sd_card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_memory"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/mark_pro"
                    android:textColor="@color/gray"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/img_sd"
                    app:layout_constraintStart_toStartOf="@+id/img_sd"
                    app:layout_constraintTop_toBottomOf="@+id/img_sd"
                    tools:text="256 Gb" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/select_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mark_pro_medium"
                android:text="@string/select_color_and_capacity"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tabs_card"
                app:layout_constraintTop_toBottomOf="@+id/info_phone" />

            <CheckBox
                android:id="@+id/check_color_1"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:button="@null"
                android:ellipsize="end"
                android:background="@drawable/color_shape"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="@+id/select_text"
                app:layout_constraintTop_toBottomOf="@+id/select_text" />

            <CheckBox
                android:id="@+id/check_color_2"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:button="@null"
                android:ellipsize="end"
                android:background="@drawable/color_shape"
                android:elevation="2dp"
                app:layout_constraintStart_toEndOf="@+id/check_color_1"
                app:layout_constraintTop_toBottomOf="@+id/select_text" />

            <CheckBox
                android:id="@+id/check_ssd_1"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/select_ssd_btn"
                android:button="@null"
                android:elevation="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:minLines="2"
                android:fontFamily="@font/mark_pro_medium"
                android:textColor="@color/selector_ssd_text"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/check_color_2"
                app:layout_constraintStart_toEndOf="@+id/check_color_2"
                app:layout_constraintTop_toTopOf="@+id/check_color_2"
                tools:text="256 GB"/>

            <CheckBox
                android:id="@+id/check_ssd_2"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/select_ssd_btn"
                android:button="@null"
                android:elevation="2dp"
                android:fontFamily="@font/mark_pro_medium"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="@color/selector_ssd_text"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/check_ssd_1"
                app:layout_constraintStart_toEndOf="@+id/check_ssd_1"
                app:layout_constraintTop_toTopOf="@+id/check_ssd_1"
                tools:text="128 GB" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_to_cart_btn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/light_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_ssd_1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_add_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:fontFamily="@font/mark_pro_medium"
                        android:text="Add to Card!"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:fontFamily="@font/mark_pro_medium"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="$1,500.00" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>